--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.0.0-beta.3",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "php": "0.0.1",
     "rxjs": "^5.5.2",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
